--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "next": "14.1.0",
     "react": "^18",
     "react-confetti": "^6.1.0",
